--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@ionic-native/core": "4.5.3",
     "@ionic-native/file": "^4.7.0",
     "@ionic-native/file-transfer": "^4.7.0",
+    "@ionic-native/http": "^4.7.0",
     "@ionic-native/splash-screen": "4.5.3",
     "@ionic-native/status-bar": "4.5.3",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
@@ -47,7 +49,8 @@
     "plugins": {
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-file-transfer": {}
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-advanced-http": {}
     }
   }
 }
